--- a/public/frontend_css/style.css
+++ b/public/frontend_css/style.css
@@ -1291,6 +1291,32 @@ input::-ms-input-placeholder {
 
 /*page8 ends here*/
 
+/* terminate section starts here*/
+
+#terminate-section{
+  visibility: hidden;
+}
+
+
+.terminate-container{
+  width: 100%;
+  background-color: #000;
+  color: #ccc;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.terminate-info{
+  position: relative;
+  top: 50%;
+  text-align: center;
+  transform: translateY(-50%);
+}
+
+/* terminate section ends here*/
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
